# BTC-Quant

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  LICENSE  MULTI_TIMEFRAME_SUMMARY.md  Makefile  PHASE1_SUMMARY.md  PROFESSIONAL_DELIVERABLES.md  README.md  README_NEW.md  Readme.md  SECURITY.md  SETUP_GUIDE.md  STRATEGY_ANALYSIS_GUIDE.md  TEST_COVERAGE_REPORT.md  config.py  config.yml  demo.py  demo_advanced_features.py  docker-compose.yml  e run --rm btc-quant python main.py --help  enhanced_main.py  env.example  main.py  optimization_demo.py  pyproject.toml  pytest.ini  quick_start.py  requirements-dev.txt  requirements.txt  run_analysis.py  run_demo.py  setup.bat  setup.py  (+8 more)
.github/workflows/: main.yml  tests.yml
monitoring/: prometheus.yml
notebooks/: README.md
results/: strategy_analysis_20250730_165115.txt  validation_results.txt
src/: __init__.py  data_pipeline.py  data_sources.py  enhanced_validation.py  evaluation.py  feature_engineering.py  feature_selection.py  hyperparameter_optimization.py  model.py  modeling.py  monte_carlo_simulation.py  parameter_optimization.py  position_sizing.py  professional_visualizations.py  risk_management.py  strategy_analysis.py  threshold_optimization.py  transaction_costs.py  validation.py  visualization.py
src/data/: __init__.py  caching_layer.py  multi_source_loader.py  quality_control.py
src/statistics/: __init__.py  performance_metrics.py  risk_models.py  significance_tests.py
tests/: __init__.py  test_core_functionality.py  test_critical_modules.py  test_data_pipeline.py  test_dev_requirements.py  test_evaluation.py  test_feature_engineering.py  test_integration.py  test_model.py  test_strategy_analysis.py  test_visualization.py
tests/unit/: test_statistics.py
